chore: Android SDK 36 업그레이드 및 record → class 전환